# homework_task_3

./: CMakeLists.txt  README.md  test.cpp
mdArray/: mdArray.cpp  mdArray.hpp
stage_four/: CMakeLists.txt
stage_four/acme/: acme.cpp  acme.hpp  main.cpp
stage_four/mdArray/: mdArray.cpp  mdArray.hpp
stage_four/taskThree-acme/: CMakeLists.txt
stage_four/taskThree-mdArray/: CMakeLists.txt
stage_four/taskThree-mdArray/headers/: mdArray.hpp
stage_four/taskThree-unittest/: CMakeLists.txt  test.cpp
stage_four/unittest/: test.cpp
stage_onetwo/: CMakeLists.txt
stage_onetwo/mdArray/: mdArray.cpp
stage_onetwo/test/: test.cpp
stage_onetwo/unittest/: CMakeLists.txt  test.cpp
stage_three/: CMakeLists.txt
stage_three/acme/: CMakeLists.txt  acme.cpp
stage_three/mdArray/: CMakeLists.txt  mdArray.cpp
stage_three/test/: CMakeLists.txt
stage_threefour/: CMakeLists.txt
stage_threefour/acme/: acme.hpp  main.cpp
stage_threefour/mdArray/: mdArray.cpp  mdArray.hpp
stage_threefour/test/: test.cpp
test/: test.cpp
